# chumon_system

./: .gitignore  LICENSE  database_schema.md
.github/workflows/: deploy.yml
server/: .env.example  pyproject.toml
server/app/: main.py
server/app/core/: auth.py  config.py  db.py  deps.py  exceptions.py  handlers.py  logger.py  validators.py
server/app/dtos/: meal_dto.py  query_params.py  response_dto.py  staff_dto.py
server/app/enums/: meal.py  staff.py
server/app/models/: __init__.py  collection.py  meal.py  staff.py  staff_session.py  type.py
server/app/repositories/: meal_repository.py  staff_repository.py  staff_session_repository.py
server/app/routes/admin/: auth.py  meals.py  staffs.py  tables.py
server/app/services/: auth_service.py  meal_service.py  staff_service.py
server/docker/: dockerfile
server/tests/core/: test_auth.py  test_config.py  test_db.py  test_deps.py  test_exceptions.py  test_handlers.py  test_logger.py  test_validators.py
server/tests/models/: test_collection.py  test_meal.py  test_staff.py  test_staff_session.py  test_type.py
server/tests/repositories/: test_meal_repository.py  test_staff_repository.py  test_staff_session_repository.py
